Fix Visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -1438,6 +1438,25 @@
 											}
 										}
 								}
+							// Highlight Color
+								.RichTextViewer {
+									.highlight-color--red {background-color: var(--highlight-color--red-dark);}
+									.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
+									.highlight-color--yellow {background-color: var(--highlight-color--yellow-dark);}
+									.highlight-color--green {background-color: var(--highlight-color--green-dark);}
+									.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
+									.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+								}
+								[data-slate-node="element"] {
+									[data-slate-node~="text"] {
+										.highlight-color--red {background-color: var(--highlight-color--red-dark);}
+										.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
+										.highlight-color--yellow {background-color: var(--highlight-color--yellow-dark);}
+										.highlight-color--green {background-color: var(--highlight-color--green-dark);}
+										.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
+										.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+									}
+								}
 						}
 				}
 		}
